# voice_interviewer

./: .gitignore  README.md  output.json  pyproject.toml  run.py
docs/: models.txt
frontend/: README.md  index.html  metadata.json  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  types.ts
frontend/src/components/: StatusIndicator.tsx  Visualizer.tsx
frontend/src/pages/: InterviewPage.tsx  LandingPage.tsx  UploadPage.tsx
frontend/src/services/: api.ts  audioUtils.ts
scripts/: download_voice.py
voice_agent/: __init__.py  config.py  main.py  server.py
voice_agent/models/: interview.py
voice_agent/prompts/: base_prompt.md
voice_agent/services/: __init__.py  interview.py  llm.py  report.py  resume.py  stt.py  tts.py  vad.py
voice_agent/static/: index.html
voice_agent/static/assets/: index-DcAURg_e.js
